SSCS-11092 sets adjournment in progress status in handlers
includes in tests

modernises tests