@@ -1,10 +1,7 @@
 package uk.gov.hmcts.reform.sscs.ccd.presubmit.issueadjournment;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
@@ -17,29 +14,40 @@ import static uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocumentTranslationStatus.
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.HEARING;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.NOT_LISTABLE;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.READY_TO_LIST;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.YES;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import javax.validation.Validation;
 import javax.validation.Validator;
-import junitparams.JUnitParamsRunner;
-import junitparams.Parameters;
 import org.hibernate.validator.messageinterpolation.ParameterMessageInterpolator;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.sscs.ccd.callback.Callback;
 import uk.gov.hmcts.reform.sscs.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.sscs.ccd.callback.PreSubmitCallbackResponse;
-import uk.gov.hmcts.reform.sscs.ccd.domain.*;
+import uk.gov.hmcts.reform.sscs.ccd.domain.Appeal;
+import uk.gov.hmcts.reform.sscs.ccd.domain.CaseDetails;
+import uk.gov.hmcts.reform.sscs.ccd.domain.CollectionItem;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DocumentLink;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DwpState;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicList;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicListItem;
+import uk.gov.hmcts.reform.sscs.ccd.domain.EventType;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocument;
+import uk.gov.hmcts.reform.sscs.ccd.domain.SscsDocumentDetails;
 import uk.gov.hmcts.reform.sscs.ccd.presubmit.InterlocReviewState;
 import uk.gov.hmcts.reform.sscs.service.FooterService;
 
-@RunWith(JUnitParamsRunner.class)
-public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
+@ExtendWith(MockitoExtension.class)
+class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
 
     private static final String USER_AUTHORISATION = "Bearer token";
     private IssueAdjournmentNoticeAboutToSubmitHandler handler;
@@ -55,8 +63,6 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
 
     private SscsCaseData sscsCaseData;
 
-    private SscsDocument document;
-
     protected static Validator validator = Validation
             .byDefaultProvider()
             .configure()
@@ -64,8 +70,8 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
             .buildValidatorFactory()
             .getValidator();
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
         openMocks(this);
         handler = new IssueAdjournmentNoticeAboutToSubmitHandler(footerService, validator);
 
@@ -88,7 +94,8 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
             .adjournCaseDirectionsDueDate("")
             .adjournCaseTypeOfNextHearing("")
             .adjournCaseNextHearingVenue("")
-            .adjournCaseNextHearingVenueSelected(new DynamicList(new DynamicListItem("",""), Arrays.asList(new DynamicListItem("", ""))))
+            .adjournCaseNextHearingVenueSelected(new DynamicList(
+                new DynamicListItem("",""), List.of(new DynamicListItem("", ""))))
             .adjournCasePanelMembersExcluded("")
             .adjournCaseDisabilityQualifiedPanelMemberName("")
             .adjournCaseMedicallyQualifiedPanelMemberName("")
@@ -105,19 +112,20 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
             .adjournCaseNextHearingFirstAvailableDateAfterPeriod("")
             .adjournCaseReasons(List.of(new CollectionItem<>(null, "")))
             .adjournCaseAdditionalDirections(List.of(new CollectionItem<>(null, "")))
+            .isAdjournmentInProgress(YES)
         .build();
 
         when(caseDetails.getCaseData()).thenReturn(sscsCaseData);
     }
 
     @Test
-    public void givenANonIssueAdjournmentEvent_thenReturnFalse() {
+    void givenANonIssueAdjournmentEvent_thenReturnFalse() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
-        assertFalse(handler.canHandle(ABOUT_TO_SUBMIT, callback));
+        assertThat(handler.canHandle(ABOUT_TO_SUBMIT, callback)).isFalse();
     }
 
     @Test
-    public void givenAnIssueAdjournmentEvent_thenCreateAdjournmentWithFooterAndSetStatesAndClearDraftDoc() {
+    void givenAnIssueAdjournmentEvent_thenCreateAdjournmentWithFooterAndSetStatesAndClearDraftDoc() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("bla.com").documentFilename("bla.pdf").build();
         final SscsCaseData sscsCaseData = callback.getCaseDetails().getCaseData();
         sscsCaseData.setAdjournCasePreviewDocument(docLink);
@@ -128,44 +136,46 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
         verify(footerService).createFooterAndAddDocToCase(eq(docLink), any(), eq(ADJOURNMENT_NOTICE), any(), eq(null), eq(null), eq(null));
 
 
-        assertEquals(DwpState.ADJOURNMENT_NOTICE_ISSUED.getId(), this.sscsCaseData.getDwpState());
-        assertEquals(LocalDate.now().plusDays(1).toString(), this.sscsCaseData.getDirectionDueDate());
-        assertEquals(0, (int) this.sscsCaseData.getSscsDocument().stream().filter(f -> f.getValue().getDocumentType().equals(DRAFT_ADJOURNMENT_NOTICE.getValue())).count());
+        assertThat(this.sscsCaseData.getDwpState()).isEqualTo(DwpState.ADJOURNMENT_NOTICE_ISSUED.getId());
+        assertThat(this.sscsCaseData.getDirectionDueDate()).isEqualTo(LocalDate.now().plusDays(1).toString());
+        assertThat(this.sscsCaseData.getSscsDocument().stream()
+            .filter(f -> f.getValue().getDocumentType().equals(DRAFT_ADJOURNMENT_NOTICE.getValue()))).isEmpty();
         verifyTemporaryAdjournCaseFieldsAreCleared(sscsCaseData);
     }
 
     private void verifyTemporaryAdjournCaseFieldsAreCleared(SscsCaseData sscsCaseData) {
-        assertThat(sscsCaseData.getAdjournCaseDirectionsDueDate(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseGenerateNotice(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseTypeOfHearing(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseCanCaseBeListedRightAway(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseAreDirectionsBeingMadeToParties(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseDirectionsDueDateDaysOffset(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseDirectionsDueDate(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseTypeOfNextHearing(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingVenue(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingVenueSelected(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCasePanelMembersExcluded(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseDisabilityQualifiedPanelMemberName(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseMedicallyQualifiedPanelMemberName(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseOtherPanelMemberName(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingListingDurationType(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingListingDuration(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingListingDurationUnits(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseInterpreterRequired(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseInterpreterLanguage(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingDateType(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingDateOrPeriod(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingDateOrTime(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterDate(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterPeriod(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseTime(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseReasons(), is(nullValue()));
-        assertThat(sscsCaseData.getAdjournCaseAdditionalDirections(), is(nullValue()));
+        assertThat(sscsCaseData.getAdjournCaseDirectionsDueDate()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseGenerateNotice()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseTypeOfHearing()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseCanCaseBeListedRightAway()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseAreDirectionsBeingMadeToParties()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseDirectionsDueDateDaysOffset()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseDirectionsDueDate()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseTypeOfNextHearing()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingVenue()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingVenueSelected()).isNull();
+        assertThat(sscsCaseData.getAdjournCasePanelMembersExcluded()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseDisabilityQualifiedPanelMemberName()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseMedicallyQualifiedPanelMemberName()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseOtherPanelMemberName()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingListingDurationType()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingListingDuration()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingListingDurationUnits()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseInterpreterRequired()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseInterpreterLanguage()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingDateType()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingDateOrPeriod()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingDateOrTime()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterDate()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseNextHearingFirstAvailableDateAfterPeriod()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseTime()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseReasons()).isNull();
+        assertThat(sscsCaseData.getAdjournCaseAdditionalDirections()).isNull();
+        assertThat(sscsCaseData.getIsAdjournmentInProgress()).isNull();
     }
 
     @Test
-    public void givenAnIssueAdjournmentEvent_thenCreateAdjournmentWithFooterAndTranslationRequired() {
+    void givenAnIssueAdjournmentEvent_thenCreateAdjournmentWithFooterAndTranslationRequired() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("bla.com").documentFilename("bla.pdf").build();
         callback.getCaseDetails().getCaseData().setAdjournCasePreviewDocument(docLink);
         callback.getCaseDetails().getCaseData().setAdjournCaseDirectionsDueDate(LocalDate.now().plusDays(1).toString());
@@ -176,76 +186,76 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
         verify(footerService).createFooterAndAddDocToCase(eq(docLink), any(), eq(ADJOURNMENT_NOTICE), any(), eq(null), eq(null), eq(TRANSLATION_REQUIRED));
 
 
-        assertEquals(null, sscsCaseData.getDwpState());
-        assertEquals(InterlocReviewState.WELSH_TRANSLATION.getId(), sscsCaseData.getInterlocReviewState());
-        assertEquals("Yes", sscsCaseData.getTranslationWorkOutstanding());
+        assertThat(sscsCaseData.getDwpState()).isNull();
+        assertThat(sscsCaseData.getInterlocReviewState()).isEqualTo(InterlocReviewState.WELSH_TRANSLATION.getId());
+        assertThat(sscsCaseData.getTranslationWorkOutstanding()).isEqualTo("Yes");
     }
 
     @Test
-    public void givenAnIssueAdjournmentEventWithDueDate_thenCreateAdjournmentWithGivenDueDate() {
+    void givenAnIssueAdjournmentEventWithDueDate_thenCreateAdjournmentWithGivenDueDate() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("bla.com").documentFilename("bla.pdf").build();
         callback.getCaseDetails().getCaseData().setAdjournCasePreviewDocument(docLink);
         callback.getCaseDetails().getCaseData().setAdjournCaseDirectionsDueDate(LocalDate.now().plusDays(1).toString());
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertEquals(LocalDate.now().plusDays(1).toString(), sscsCaseData.getDirectionDueDate());
+        assertThat(sscsCaseData.getDirectionDueDate()).isEqualTo(LocalDate.now().plusDays(1).toString());
     }
 
     @Test
-    public void givenAnIssueAdjournmentEventWithDueDateDaysOffset_thenCreateAdjournmentWithGivenDueDateOffset() {
+    void givenAnIssueAdjournmentEventWithDueDateDaysOffset_thenCreateAdjournmentWithGivenDueDateOffset() {
         callback.getCaseDetails().getCaseData().setAdjournCaseDirectionsDueDateDaysOffset("7");
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertEquals(LocalDate.now().plusDays(7).toString(), sscsCaseData.getDirectionDueDate());
+        assertThat(sscsCaseData.getDirectionDueDate()).isEqualTo(LocalDate.now().plusDays(7).toString());
     }
 
     @Test
-    public void givenAnIssueAdjournmentEventWithDirectionsToAllParties_thenSetStateToNotListable() {
+    void givenAnIssueAdjournmentEventWithDirectionsToAllParties_thenSetStateToNotListable() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("bla.com").documentFilename("bla.pdf").build();
         callback.getCaseDetails().getCaseData().setAdjournCasePreviewDocument(docLink);
         callback.getCaseDetails().getCaseData().setAdjournCaseAreDirectionsBeingMadeToParties("Yes");
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertEquals(NOT_LISTABLE, sscsCaseData.getState());
+        assertThat(sscsCaseData.getState()).isEqualTo(NOT_LISTABLE);
     }
 
     @Test
-    public void givenAnIssueAdjournmentEventWithNoDirections_thenSetStateToReadyToList() {
+    void givenAnIssueAdjournmentEventWithNoDirections_thenSetStateToReadyToList() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("bla.com").documentFilename("bla.pdf").build();
         callback.getCaseDetails().getCaseData().setAdjournCasePreviewDocument(docLink);
         callback.getCaseDetails().getCaseData().setAdjournCaseAreDirectionsBeingMadeToParties("No");
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertEquals(READY_TO_LIST, sscsCaseData.getState());
+        assertThat(sscsCaseData.getState()).isEqualTo(READY_TO_LIST);
     }
 
     @Test
-    public void givenAnIssueAdjournmentEventForWelshCase0_thenTheCaseStateShoyleStayUnchanged() {
+    void givenAnIssueAdjournmentEventForWelshCase0_thenTheCaseStateShoyleStayUnchanged() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("bla.com").documentFilename("bla.pdf").build();
         callback.getCaseDetails().getCaseData().setAdjournCasePreviewDocument(docLink);
         callback.getCaseDetails().getCaseData().setLanguagePreferenceWelsh("yes");
 
         handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
-        assertEquals(HEARING, sscsCaseData.getState());
+        assertThat(sscsCaseData.getState()).isEqualTo(HEARING);
     }
 
     @Test
-    public void givenAnIssueAdjournmentEventAndNoDraftAdjournmentOnCase_thenDisplayAnError() {
+    void givenAnIssueAdjournmentEventAndNoDraftAdjournmentOnCase_thenDisplayAnError() {
         callback.getCaseDetails().getCaseData().setAdjournCasePreviewDocument(null);
 
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         String error = response.getErrors().stream().findFirst().orElse("");
-        assertEquals("There is no Draft Adjournment Notice on the case so adjournment cannot be issued", error);
+        assertThat(error).isEqualTo("There is no Draft Adjournment Notice on the case so adjournment cannot be issued");
     }
 
     @Test
-    public void givenANonPdfDecisionNotice_thenDisplayAnError() {
+    void givenANonPdfDecisionNotice_thenDisplayAnError() {
         DocumentLink docLink = DocumentLink.builder().documentUrl("test.doc").build();
         sscsCaseData.setAdjournCasePreviewDocument(docLink);
 
@@ -254,19 +264,21 @@ public class IssueAdjournmentNoticeAboutToSubmitHandlerTest {
         PreSubmitCallbackResponse<SscsCaseData> response = handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
 
         String error = response.getErrors().stream().findFirst().orElse("");
-        assertEquals("You need to upload PDF documents only", error);
-        assertEquals(1, (int) sscsCaseData.getSscsDocument().stream().filter(f -> f.getValue().getDocumentType().equals(DRAFT_ADJOURNMENT_NOTICE.getValue())).count());
+        assertThat(error).isEqualTo("You need to upload PDF documents only");
+        assertThat(sscsCaseData.getSscsDocument().stream()
+            .filter(f -> f.getValue().getDocumentType().equals(DRAFT_ADJOURNMENT_NOTICE.getValue()))).hasSize(1);
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = CallbackType.class, names = {"ABOUT_TO_START", "MID_EVENT", "SUBMITTED"})
+    void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
+        assertThat(handler.canHandle(callbackType, callback)).isFalse();
     }
 
     @Test
-    @Parameters({"ABOUT_TO_START", "MID_EVENT", "SUBMITTED"})
-    public void givenANonCallbackType_thenReturnFalse(CallbackType callbackType) {
-        assertFalse(handler.canHandle(callbackType, callback));
-    }
-
-    @Test(expected = IllegalStateException.class)
-    public void throwsExceptionIfItCannotHandleTheAppeal() {
+    void throwsExceptionIfItCannotHandleTheAppeal() {
         when(callback.getEvent()).thenReturn(EventType.APPEAL_RECEIVED);
-        handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION);
+        assertThatThrownBy(() -> handler.handle(ABOUT_TO_SUBMIT, callback, USER_AUTHORISATION))
+            .isInstanceOf(IllegalStateException.class);
     }
 }
